     on ``KnitContent`` aids this by allowing modification of the revision id
     such objects represent. (Robert Collins)

   * Pack indices are now partially parsed for specific key lookup using a
     bisection approach. (Robert Collins)

   * Partial commits are now approximately 40% faster by walking over the
     unselected current tree more efficiently. (Robert Collins)

   * XML inventory serialisation takes 20% less time while being stricter about
     the contents. (Robert Collins)

   * Graph ``heads()`` queries have been fixed to no longer access all history
     unnecessarily. (Robert Collins)

  IMPROVEMENTS:

   * ``bzr+https://`` smart server across https now supported. 
     (John Ferlito, Martin Pool, #128456)

   * Mutt is now a supported mail client; set ``mail_client=mutt`` in your
     bazaar.conf and ``send`` will use mutt. (Keir Mierle)

   * New option ``-c``/``--change`` for ``merge`` command for cherrypicking 
     changes from one revision. (Alexander Belchenko, #141368)

   * Show encodings, locale and list of plugins in the traceback message.
     (Martin Pool, #63894)

   * Experimental directory formats can now be marked with
     ``experimental = True`` during registration. (Ian Clatworthy)

  DOCUMENTATION:

   * New *Bazaar in Five Minutes* guide.  (Matthew Revell)

   * The hooks reference documentation is now converted to html as expected.
     (Ian Clatworthy)

  BUG FIXES:

   * A progress bar has been added for knitpack -> knitpack fetching.
     (Robert Collins, #157789)

   * Connection error reporting for the smart server has been fixed to
     display a user friendly message instead of a traceback.
     (Ian Clatworthy, #115601)

   * Make sure to use ``O_BINARY`` when opening files to check their
     sha1sum. (Alexander Belchenko, John Arbash Meinel, #153493)

   * Fix a problem with Win32 handling of the executable bit.
     (John Arbash Meinel, #149113)
